--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ a {
     width: 100%;
     display: flex;
     justify-content: space-around;
-    height: 200px;
 }
 
 .header-links {
@@ -25,16 +24,17 @@ a {
     gap: 30px;
 }
 
-.header-logo {
-    font-weight: bold;
-    font-size: 24px;
-    color: #F9FAF8;
-}
-
 .hero-wrapper {
     display: flex;
     justify-content: center;
     gap: 130px;
+    margin-top: 200px;
+}
+
+.header-logo {
+    font-weight: bold;
+    font-size: 24px;
+    color: #F9FAF8;
 }
 
 .hero-image {
