--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     display: flex;
     margin: 0;
-    padding: 10px;
+    padding-top: 10px;
     background-color: #1F2937;
     flex-direction: column;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -28,7 +28,8 @@ a {
     display: flex;
     justify-content: center;
     gap: 130px;
-    margin-top: 200px;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .header-logo {
@@ -60,5 +61,33 @@ a {
     font-weight: 900;
     width: 300px;
     margin-bottom: 0;
+}
+
+.info-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    width: 100%;
+
+}
+
+.info-images {
+    height: 400px;
+}
+
+.info-images {
+    display: flex;
+    gap: 20px;
+}
+
+.quote {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #E5E7EB;
+    width: 100%;
+    height: 300px;
 }
 
