--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     padding-top: 10px;
     background-color: #1F2937;
     flex-direction: column;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
@@ -21,7 +21,7 @@ a {
 
 .header-links {
     display: flex;
-    gap: 30px;
+    gap: 70px;
 }
 
 .hero-wrapper {
@@ -84,10 +84,23 @@ a {
 
 .quote {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #E5E7EB;
     width: 100%;
     height: 300px;
+    padding: 100px;
+}
+
+.quote p {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: light;
+    width: 800px;
+}
+
+.quote .quote-credit {
+    align-self: flex-end;
 }
 
