--- a/style.css
+++ b/style.css
@@ -4,13 +4,19 @@ body {
     padding-top: 10px;
     background-color: #1F2937;
     flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 a {
     text-decoration: none;
     color: #E5E7EB;
     font-size: 18px;
+}
+
+.hero-button {
+    background-color: #3882F6;
+    height: 20px;
+    width: 100px;
 }
 
 .header {
@@ -27,6 +33,7 @@ a {
 .hero-wrapper {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 130px;
     margin-top: 100px;
     margin-bottom: 100px;
@@ -70,17 +77,38 @@ a {
     align-items: center;
     background-color: white;
     width: 100%;
-
-}
-
-.info-images {
-    height: 400px;
+    padding-top: 50px;
 }
 
 .info-images {
     display: flex;
-    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    height: 220px;
+    margin-bottom: 100px;
 }
+
+.info-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    padding-left: 20px;
+}
+
+.info-image p {
+    text-align: center;
+    width: 210px;
+}
+
+.image {
+    height: 200px;
+    width: 200px;
+    border: solid 3px #1F2937;
+    border-radius: 15%;
+}
+
+
 
 .quote {
     display: flex;
@@ -90,17 +118,38 @@ a {
     background-color: #E5E7EB;
     width: 100%;
     height: 300px;
-    padding: 100px;
+    margin-top: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .quote p {
     font-size: 36px;
     font-style: italic;
     font-weight: light;
+    color: #1F2937;
     width: 800px;
 }
 
 .quote .quote-credit {
     align-self: flex-end;
 }
+
+.call-to-action-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    width: 100%;
+    height: 300px;
+}
+
+.call-to-action {
+    background-color: #3882F6;
+    border-radius: 10px;
+    width: 1000px;
+    height: 125px;
+}
+
+
 
