--- a/style.css
+++ b/style.css
@@ -182,5 +182,19 @@ button {
     border: 2px solid white;
 }
 
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1F2937;
+    width: 100%;
+    height: 70px;
+}
+
+.footer p {
+    color: #E5E7EB;
+    text-align: center;
+}
+
 
 
