--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     padding-top: 10px;
     background-color: #1F2937;
     flex-direction: column;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a {
@@ -53,7 +53,6 @@ button {
     display: flex;
     height: 250px;
     width: 500px;
-    border: 1px solid wheat;
     background-color: grey;
     justify-content: center;
     align-items: center;
