--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ button {
 .quote p {
     font-size: 36px;
     font-style: italic;
-    font-weight: light;
+    font-weight: lighter;
     color: #1F2937;
     width: 800px;
 }
